# ip-orch

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile.mlips  README.md  pyproject.toml  to-do
.github/workflows/: ci.yml  docker.yml
artifacts/: 260419_implementation_plan.md  260419_walkthrough.md  260420_diagnostic.md
examples/: bilayer.py  calculators_test.py  python-test.ipynb  surfaces_benchmark.ipynb
ip_orch/: __init__.py  api.py
ip_orch/cli/: commands.py  env_utils.py  helpers.py  main.py  repo_map.py
ip_orch/config/: config_store.py
ip_orch/core/: energy_correction.py  model_builders.py  model_factory.py  reference_energies.py  worker.py
ip_orch/scripts/: __init__.py  isolated_atom_energies.csv  isolated_atom_energies.py  reference_energies.csv  result-analysis.ipynb  results_processing.py  run.sh  slurm-90876.out
ip_orch/scripts/.ipynb_checkpoints/: isolated_atom_energies-checkpoint.py  result-analysis-checkpoint.ipynb
ip_orch/scripts/results/: isolated_atom_energies.csv
paper/: joss.md  references.bib
tests/: conftest.py  test_api.py  test_cli.py  test_config_store.py  test_energy_correction.py  test_env_utils.py  test_examples.py  test_helpers.py  test_model_factory.py  test_repo_map.py
