[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ip-orch"
version = "0.0.1"
authors = [
  { name="Mauri Pereira dos Santos Júnior", email="mauri.junior@lnls.br" },
  { name="Pedro Henrique Machado Zanineli", email="pedro.zanineli@lnnano.cnpem.br" },
  { name="Bruno Focassio", email="bruno.focassio@lnnano.cnpem.br" },
]
description = "Uma biblioteca para MLIPs e benchmarks."
readme = "README.md"
requires-python = ">=3.9"
license = { text="MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "ase",
    "rich",  
    "numpy",  
    "pandas",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
ip_orch = ["scripts/*.csv"]

[project.scripts]
ip-orch = "ip_orch.cli.main:main"

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-mock>=3.10",
  "ruff>=0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = []
